--- a/public/notes.html
+++ b/public/notes.html
@@ -36,11 +36,11 @@
         <div class="col-8">
           <input
             class="note-title"
-            placeholder="Note Title"
+            placeholder="Title"
             maxlength="28"
             type="text"
           />
-          <textarea class="note-textarea" placeholder="Note Text"></textarea>
+          <textarea class="note-textarea" placeholder="Text"></textarea>
         </div>
       </div>
     </div>
